Påbörjat Subscribe- Interface för Command-mönster. implementerat "under radarn" i klasser som berörs. Körs med fungerar ej helt som den ska. Nytt test för att ta emot meddelanden från en fakead server.